--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Carnival DOM Trileras</title>
+    <title>Trileras</title>
 </head>
-<h1>TRILERAS</h1>
 
 <body>
 
