tree dir and helpers added

--- a/index.html
+++ b/index.html
@@ -4,11 +4,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./src/css/footer.css">
+    <link rel="stylesheet" href="./src/css/header.css">
+    <link rel="stylesheet" href="./src/css/main.css">
+
     <title>Trileras</title>
 </head>
 
 <body>
 
+    <header>
+        HEADER
+    </header>
+    <main>
+        MAIN
+    </main>
+    <footer>
+        FOOTER
+    </footer>
+
 </body>
+<script src="./src/js/events.js"></script>
+<script src="./src/js/functions.js"></script>
+<script src="./src/js/helper.js"></script>
 
 </html>
