--- a/index.html
+++ b/index.html
@@ -7,22 +7,36 @@
     <link rel="stylesheet" href="./src/css/footer.css">
     <link rel="stylesheet" href="./src/css/header.css">
     <link rel="stylesheet" href="./src/css/main.css">
-
     <title>Trileras</title>
 </head>
 
 <body>
-
     <header>
-        HEADER
+        <div class="header-container">
+            <div class="player-info">
+                <div class="player-name">Maria</div>
+                <div class="player-total-score">9 puntos</div>
+            </div>
+            <div class="player-current-score">1 punto</div>
+            <div class="player-timer">6 segundos</div>
+
+        </div>
     </header>
     <main>
-        MAIN
-    </main>
-    <footer>
-        FOOTER
-    </footer>
-
+        <div class="main-container">
+            <h1>TRILERAS</h1>
+            <img src="./src/img/trileras.jpg" alt="">
+        </div>
+        <div class="reset-game-container">
+            <button>Reset game</button>
+        </div>
+        <main>
+            <footer>
+                <div class="footer-container">
+                    <p>Project powered by f5</p>
+                    <p>Alba,Tetiana,Karisha,Guadalupe</p>
+                </div>
+            </footer>
 </body>
 <script src="./src/js/events.js"></script>
 <script src="./src/js/functions.js"></script>
