--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
          <!-- Formulario de inicio de juego -->
          <div class="start-game-container">
-            <h1>¡Bienvenido al Juego de Trileras!</h1>
+            <h1>¡Bienvenide al Juego de Trileras!</h1>
             <form id="start-form">
                 <label for="player-name">Ingresa tu nombre:</label>
                 <input type="text" id="player-name" name="player-name" pattern="[A-Za-z]+" title="Solo se permiten letras" required>
