TRIL-26-He añadio un h1 al header

--- a/index.html
+++ b/index.html
@@ -24,18 +24,19 @@
     </header>
     <main>
         <div class="main-container">
-            <h1>TRILERAS</h1>
+            <h1>TRILERAS LAS MEJORES</h1>
             <img src="./src/img/trileras.jpg" alt="">
         </div>
         <div class="reset-game-container">
             <button>Reset game</button>
         </div>
-         <!-- Formulario de inicio de juego -->
-         <div class="start-game-container">
+        <!-- Formulario de inicio de juego -->
+        <div class="start-game-container">
             <h1>¡Bienvenide al Juego de Trileras!</h1>
             <form id="start-form">
                 <label for="player-name">Ingresa tu nombre:</label>
-                <input type="text" id="player-name" name="player-name" pattern="[A-Za-z]+" title="Solo se permiten letras" required>
+                <input type="text" id="player-name" name="player-name" pattern="[A-Za-z]+"
+                    title="Solo se permiten letras" required>
                 <button type="submit">Iniciar Juego</button>
             </form>
         </div>
