--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
         <!-- Contenido del juego (se mostrará después de ingresar el nombre) -->
         <div class="main-container" id="game-container" style="display: none;">
-            <h1>TRILERAS</h1>
+            <h1>TRILERITAS</h1>
             <img src="./src/img/trileras.jpg" alt="">
         </div>
 
