agregue a einar al parrafo

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <footer>
                 <div class="footer-container">
                     <p>Project powered by f5</p>
-                    <p>Alba,Tetiana,Karisha,Guadalupe</p>
+                    <p>Alba,Tetiana,Karisha,Einar,Guadalupe</p>
                 </div>
             </footer>
 </body>
