--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
     <header>
         <div class="header-container">
             <div class="player-info">
-                <div class="player-name">Maria</div>
-                <div class="player-total-score">9 puntos</div>
+                <div class="player-name">Juane</div>
+                <div class="player-total-score">Score 0</div>
             </div>
-            <div class="player-current-score">1 punto</div>
-            <div class="player-timer">6 segundos</div>
+            <div class="player-info">
+            <div class="player-current-score">high score</div>
+            <div class="player-timer">5 seg</div>
+        </div>
 
         </div>
     </header>
