--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
             </div>
             <div class="player-current-score">1 punto</div>
             <div class="player-timer">6 segundos</div>
-
         </div>
     </header>
     <main>
@@ -33,26 +32,24 @@
         <div class="reset-game-container">
             <button>Reset game</button>
         </div>
-         <!-- Formulario de inicio de juego -->
-         <div class="start-game-container">
+        <!-- Formulario de inicio de juego -->
+        <div class="start-game-container">
             <h1>¡Bienvenide al Juego de Trileras!</h1>
             <form id="start-form">
                 <label for="player-name">Ingresa tu nombre:</label>
-                <input type="text" id="player-name" name="player-name" pattern="[A-Za-z]+" title="Solo se permiten letras" required>
-                <button id="openmodal"type="submit">Iniciar Juego</button>
+                <input type="text" id="player-name" name="player-name" pattern="[A-Za-z]+"
+                    title="Solo se permiten letras" required>
+                <button id="openmodal" type="submit">Iniciar Juego</button>
                 <div id='modal' class='modalcontent'>
                     <span id='closemodalbtn' class="'close">&times;</span>
-                    
                 </div>
             </form>
         </div>
-
         <!-- Contenido del juego (se mostrará después de ingresar el nombre) -->
         <div class="main-container" id="game-container" style="display: none;">
             <h1>TRILERITAS</h1>
             <img src="./src/img/trileras.jpg" alt="">
         </div>
-
         <div class="reset-game-container">
             <button id="reset-btn">Reset game</button>
         </div>
@@ -64,8 +61,8 @@
                 </div>
             </footer>
 </body>
-<script src="./src/js/events.js"></script>
-<script src="./src/js/functions.js"></script>
-<script src="./src/js/helper.js"></script>
+<script type="module" src="./src/js/functions.js"></script> <!-- Primero funciones.js -->
+<script type="module" src="./src/js/events.js"></script> <!-- Luego events.js -->
+<script type="module" src="./src/js/helper.js"></script>
 
 </html>
