removed doublle reset button

--- a/index.html
+++ b/index.html
@@ -51,17 +51,13 @@
             <h1>TRILERAS</h1>
             <img src="./src/img/trileras.jpg" alt="">
         </div>
-
-        <div class="reset-game-container">
-            <button id="reset-btn">Reset game</button>
-        </div>
-        <main>
-            <footer>
+    </main>
+<footer>
                 <div class="footer-container">
                     <p>Project powered by f5</p>
                     <p>Alba,Tetiana,Karisha,Einar,Guadalupe</p>
                 </div>
-            </footer>
+</footer>
 </body>
 <script src="./src/js/events.js"></script>
 <script src="./src/js/functions.js"></script>
