--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
                 </div>
             </footer>
 </body>
-<script src="./src/js/events.js"></script>
-<script src="./src/js/functions.js"></script>
-<script src="./src/js/helper.js"></script>
+<script type="module" src="./src/js/functions.js"></script>
+<script type="module" src="./src/js/events.js"></script>
+<script type="module" src="./src/js/helper.js"></script>
 
 </html>
