--- a/index.html
+++ b/index.html
@@ -20,8 +20,11 @@
                 <div class="player-name">Maria</div>
                 <div class="player-total-score">9 puntos</div>
             </div>
-            <div class="player-current-score">1 punto</div>
-            <div class="player-timer">6 segundos</div>
+            <div class="player-info">
+            <div class="player-timer">5 seg</div>
+            <div class="player-current-score">high score</div>
+        </div>
+
         </div>
     </header>
     <main>
@@ -59,7 +62,7 @@
                     <p>Project powered by f5</p>
                     <p>Alba,Tetiana,Karisha,Einar,Guadalupe</p>
                 </div>
-            </footer>
+</footer>
 </body>
 <script type="module" src="./src/js/functions.js"></script> <!-- Primero funciones.js -->
 <script type="module" src="./src/js/events.js"></script> <!-- Luego events.js -->
