cambios varios con el content, mediaqueries

--- a/index.html
+++ b/index.html
@@ -29,14 +29,17 @@
     </header>
     <main>
         <div class="main-container">
-            <h1>TRILERAS</h1>
-            <img src="./src/img/trileras.jpg" alt="imagen del juego incicial con los tres vasos para abajo y la pelota en el vaso de enmedio">
+        <div class="imagenes-cont">
+            <img class="vasos" src="src/img/vaso.jpg" alt="primer vaso del juego">
+            <img class="vasos" src="src/img/vaso.jpg" alt="segundo vaso del juego">
+            <img class="vasos" src="src/img/vaso.jpg" alt="tercer vaso del juego">
         </div>
-    </main>
-    <content>
-        <div class="reset-game-container">
+            <img class="pelota" src="src/img/pelota.jpg" alt="pelota para jugar">
+
+   <div class="reset-game-container">
             <button>Reset game</button>
        </div>
+
         <!-- Formulario de inicio de juego -->
         <div class="start-game-container">
             <h1>¡Bienvenide al Juego de Trileras!</h1>
@@ -50,7 +53,7 @@
                 </div>
                 </form>
                 </div>
-                </content>
+
         <!-- Contenido del juego (se mostrará después de ingresar el nombre) -->
           <footer>
                 <div class="footer-container">
