--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./src/css/footer.css">
     <link rel="stylesheet" href="./src/css/header.css">
     <link rel="stylesheet" href="./src/css/main.css">
+    <link rel="stylesheet" href="./src/css/modal.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bungee&display=swap" rel="stylesheet">
@@ -24,20 +25,15 @@
                 <div class="player-timer">5 seg</div>
                 <div class="player-current-score">high score</div>
             </div>
-
         </div>
     </header>
     <main>
         <div class="main-container">
             <h1>TRILERAS</h1>
-            <img src="./src/img/trileras.jpg" alt="">
-        </div>
-        <div class="reset-game-container">
-            <button>Reset game</button>
-        </div>
-        <!-- Formulario de inicio de juego -->
-        <div class="start-game-container">
-            <h1>¡Bienvenide al Juego de Trileras!</h1>
+            <img src="./src/img/icons/background_main.png"">
+               <!-- Formulario de inicio de juego -->
+               <div class=" start-game-container">
+            <h1 class="modal-title">INSERTE SU NOMBRE AQUI:</h1>
             <form id="start-form">
                 <label for="player-name">Ingresa tu nombre:</label>
                 <input type="text" id="player-name" name="player-name" pattern="[A-Za-z]+"
@@ -48,6 +44,10 @@
                 </div>
             </form>
         </div>
+        </div>
+        <div class="reset-game-container">
+            <button>Reset game</button>
+        </div>
         <!-- Contenido del juego (se mostrará después de ingresar el nombre) -->
         <div class="main-container" id="game-container" style="display: none;">
             <h1>TRILERITAS</h1>
@@ -56,13 +56,13 @@
         <div class="reset-game-container">
             <button id="reset-btn">Reset game</button>
         </div>
-        <main>
-            <footer>
-                <div class="footer-container">
-                    <p>Project powered by f5</p>
-                    <p>Alba,Tetiana,Karisha,Einar,Guadalupe</p>
-                </div>
-            </footer>
+    </main>
+    <footer>
+        <div class="footer-container">
+            <p>Project powered by f5</p>
+            <p>Alba,Tetiana,Karisha,Einar,Guadalupe</p>
+        </div>
+    </footer>
 </body>
 <script type="module" src="./src/js/functions.js"></script> <!-- Primero funciones.js -->
 <script type="module" src="./src/js/events.js"></script> <!-- Luego events.js -->
