added score functions

--- a/index.html
+++ b/index.html
@@ -18,18 +18,13 @@
         <div class="header-container">
             <div class="player-info">
                 <div class="player-name">Maria</div>
-                <div class="player-total-score">9 puntos</div>
+                <div class="player-total-score">SCORE</div>
             </div>
-<<<<<<< HEAD
             <div class="player-info">
             <div class="player-timer">5 seg</div>
             <div class="player-current-score">high score</div>
         </div>
 
-=======
-            <div class="player-current-score">1 punto</div>
-            <div class="player-timer">6 segundos</div>
->>>>>>> TRIL-14
         </div>
     </header>
     <main>
