fix add classname to h1

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
             <!-- Formulario de inicio de juego -->
             <div class="start-game-container">
-                <h1>¡Bienvenide al Juego de Trileras!</h1>
+                <h1 class="modal-title">¡Bienvenide al Juego de Trileras!</h1>
                 <form id="start-form">
                     <label for="player-name">Ingresa tu nombre:</label>
                     <input type="text" id="player-name" name="player-name" pattern="[A-Za-z]+"
