--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <img src="./src/img/trileras.jpg" alt="">
         </div>
         <div class="reset-game-container">
-            <button>Reset game</button>
+            <button type="button">Reset game</button>
         </div>
         <!-- Formulario de inicio de juego -->
         <div class="start-game-container">
@@ -43,8 +43,8 @@
                 <input type="text" id="player-name" name="player-name" pattern="[A-Za-z]+"
                     title="Solo se permiten letras" required>
                 <button id="openmodal" type="submit">Iniciar Juego</button>
-                <div id='modal' class='modalcontent'>
-                    <span id='closemodalbtn' class="'close">&times;</span>
+                <div id="modal" class="modalcontent">
+                    <span id="closemodalbtn" class="close">&times;</span>
                 </div>
             </form>
         </div>
@@ -54,9 +54,9 @@
             <img src="./src/img/trileras.jpg" alt="">
         </div>
         <div class="reset-game-container">
-            <button id="reset-btn">Reset game</button>
+            <button type="button" id="reset-btn">Reset game</button>
         </div>
-        <main>
+    </main>
             <footer>
                 <div class="footer-container">
                     <p>Project powered by f5</p>
