--- a/index.html
+++ b/index.html
@@ -53,11 +53,13 @@
                     </div>
                 </form>
             </div>
+            </div>
 
             <!-- Contenido del juego (se mostrará después de ingresar el nombre) -->
-            <footer>
+            <footer class="coders">
                 <div class="footer-container">
                     <p>Project powered by f5</p>
+                    
                     <p>Alba,Tetiana,Karisha,Einar,Guadalupe</p>
                 </div>
             </footer>
