Sonido principal juego

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bungee&display=swap" rel="stylesheet">
     <title>Trileras</title>
+    <!-- Sonido principal del juego -->
+    <audio id="intro" src="Sound/80-synth-music-2-14672.mp3" autoplay></audio>
 </head>
 
 <body>
