--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Bungee&display=swap" rel="stylesheet">
     <title>Trileras</title>
     <!-- Sonido principal del juego -->
-    <audio id="intro" src="Sound/80-synth-music-2-14672.mp3" autoplay></audio>
+    <audio autoplay loop>
+        <source src="Sound/80-synth-music-2-14672.mp3" type="audio/mpeg">
+    </audio>
+    
 </head>
 
 <body>
