--- a/index.html
+++ b/index.html
@@ -13,10 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Bungee&display=swap" rel="stylesheet">
     <title>Trileras</title>
     <!-- Sonido principal del juego -->
-    <audio autoplay loop>
-        <source src="Sound/80-synth-music-2-14672.mp3" type="audio/mpeg">
-    </audio>
-    
+    <audio src="Sound/80-synth-music-2-14672.mp3" autoplay loop></audio>
 </head>
 
 <body>
