Sonido principal juego

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Bungee&display=swap" rel="stylesheet">
     <title>Trileras</title>
     <!-- Sonido principal del juego -->
-    <audio src="Sound/80-synth-music-2-14672.mp3" autoplay loop></audio>
+    <audio id="myAudio" controls>
+        <source src="Sound/80-synth-music-2-14672.mp3" type="audio/mpeg">
+      </audio>
 </head>
 
 <body>
