--- a/index.html
+++ b/index.html
@@ -30,12 +30,14 @@
     <main>
         <div class="main-container">
             <div class="imagenes-cont">
-                <img id="cup1" class="vasos" src="src/img/vaso.jpg" alt="primer vaso del juego">
-                <img id="cup2" class="vasos" src="src/img/vaso.jpg" alt="segundo vaso del juego">
-                <img id="cup3" class="vasos" src="src/img/vaso.jpg" alt="tercer vaso del juego">
+                <img id="cup1" class="vasos" src="src/img/vaso.png" alt="primer vaso del juego">
+                <img id="cup2" class="vasos" src="src/img/vaso.png" alt="segundo vaso del juego">
+                <img id="cup3" class="vasos" src="src/img/vaso.png" alt="tercer vaso del juego">
             </div>
-            <img class="pelota" src="src/img/pelota.jpg" alt="pelota para jugar">
-git
+            <div class="cont-pelota">
+                <img class="pelota" src="src/img/pelota.png" alt="pelota para jugar">
+            </div>
+
             <div class="reset-game-container">
                 <button type="button">Reset game</button>
             </div>
