--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
     <main>
         <div class="main-container">
             <div class="imagenes-cont">
-                <img id="cup1" class="vasos" src="src/img/vaso.png" alt="primer vaso del juego">
-                <img id="cup2" class="vasos" src="src/img/vaso.png" alt="segundo vaso del juego">
-                <img id="cup3" class="vasos" src="src/img/vaso.png" alt="tercer vaso del juego">
+                <img id="cup1" class="vasos" value="1" src="src/img/vaso.png" alt="primer vaso del juego">
+                <img id="cup2" class="vasos" value="2" src="src/img/vaso.png" alt="segundo vaso del juego">
+                <img id="cup3" class="vasos" value="3" src="src/img/vaso.png" alt="tercer vaso del juego">
             </div>
             <div class="cont-pelota">
                 <img class="pelota" src="src/img/pelota.png" alt="pelota para jugar">
@@ -56,17 +56,17 @@
                 </form>
             </div>
         </div>
-</main>
-            <!-- Contenido del juego (se mostrará después de ingresar el nombre) -->
-            <footer>
-                <div class="footer-container">
-                    <p>Project powered by f5</p>
-                    <p>Alba,Tetiana,Karisha,Einar,Guadalupe</p>
-                </div>
-            </footer>
-            <script type="module" src="./src/js/functions.js"></script> <!-- Primero funciones.js -->
-            <script type="module" src="./src/js/events.js"></script> <!-- Luego events.js -->
-            <script type="module" src="./src/js/helper.js"></script>
+    </main>
+    <!-- Contenido del juego (se mostrará después de ingresar el nombre) -->
+    <footer>
+        <div class="footer-container">
+            <p>Project powered by f5</p>
+            <p>Alba,Tetiana,Karisha,Einar,Guadalupe</p>
+        </div>
+    </footer>
+    <script type="module" src="./src/js/functions.js"></script> <!-- Primero funciones.js -->
+    <script type="module" src="./src/js/events.js"></script> <!-- Luego events.js -->
+    <script type="module" src="./src/js/helper.js"></script>
 </body>
 
 </html>
