cambios ultima hora

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style type="text/css">
+        body {
+            background-image: url('src/img/icons/background_main.png');
+        }
+    </style>
     <link rel="stylesheet" href="./src/css/footer.css">
     <link rel="stylesheet" href="./src/css/header.css">
     <link rel="stylesheet" href="./src/css/main.css">
@@ -15,6 +20,7 @@
 </head>
 
 <body>
+    
     <header>
         <div class="header-container">
             <div class="player-info">
