--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style type="text/css">
         body {
-            background-image: url('src/img/icons/background_main.png');
+            background-image: url('./src/img/background_main.png');
         }
     </style>
     <link rel="stylesheet" href="./src/css/footer.css">
@@ -20,12 +20,11 @@
 </head>
 
 <body>
-
     <header>
         <div class="header-container">
             <div class="player-info">
                 <div class="player-name">Juane</div>
-                <div class="player-total-score">Score 0</div>
+                <div class="player-total-score">Score<span class="score">0</span></div>
             </div>
             <div class="player-info">
                 <div class="player-current-score">high score</div>
@@ -43,11 +42,9 @@
             <div class="cont-pelota">
                 <img class="pelota" src="src/img/pelota.png" alt="pelota para jugar">
             </div>
-
             <div class="reset-game-container">
-                <button type="button">Reset game</button>
+                <button id="resetButon" type="button">Reset game</button>
             </div>
-
             <!-- Formulario de inicio de juego -->
             <div class="start-game-container">
                 <h1 class="modal-title">¡Bienvenide al Juego de Trileras!</h1>
@@ -62,12 +59,10 @@
                 </form>
             </div>
         </div>
-
         <!-- Contenido del juego (se mostrará después de ingresar el nombre) -->
         <footer class="coders">
             <div class="footer-container">
                 <p>Project powered by f5</p>
-
                 <p>Alba,Tetiana,Karisha,Einar,Guadalupe</p>
             </div>
         </footer>
