--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <!-- Sonido principal del juego -->
                 <div id="audio-container">
                     <audio id="myAudio" controls>
-                        <source src="Sound/80-synth-music-2-14672.mp3" type="audio/mpeg">
+                        <source src="Sound/fondo.mp3" type="audio/mpeg">
                     </audio>
                     <button onclick="document.getElementById('myAudio').play()">♫Play 4 Music♫</button>
                 </div>
