--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <img class="pelota" src="src/img/pelota.png" alt="pelota para jugar">
             </div>
             <div class="reset-game-container">
-                <button>Reset game</button>
+                <button class="resetButon">Reset game</button>
 
                 <!-- Sonido principal del juego -->
                 <div id="audio-container">
