end of the project

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div class="player-total-score">Score<span class="score">0</span></div>
             </div>
             <div class="player-info">
-                <div class="player-current-score">high score</div>
+                <div class="player-current-score">high score: 13</div>
                 <div class="player-timer">5 seg</div>
             </div>
         </div>
